[package]
name = "wson_wasm"
version = "0.1.0"
edition = "2021"
authors = ["LunaStev <lunastev@gurmstudios.com>"]
description = "WSON data serialization WASM"
license = "MPL-2.0"
repository = "https://github.com/LunaStev/wson-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wson_rs = "0.2.4"
